--- a/app/src/main/res/drawable/textinputborder.xml
+++ b/app/src/main/res/drawable/textinputborder.xml
@@ -1,11 +1,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#f9d1d5" />
+    <solid android:color="#ffd6da" />
     <!--
    <stroke android:width="2.5dp"/>
      android:color="#963f3f" />
      -->
-    <corners
-        android:radius="5dp"/>
+    <corners android:radius="5dp"/>
 </shape>
 
