Added description to NewRecipe activity & dynamically showing favorite recepies from server

--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -7,8 +7,11 @@
     android:id="@+id/favsContainer">
 
 
+
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/favsTable"></TableLayout>
+
+
 </ScrollView>
