--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -77,6 +77,21 @@
 
         </LinearLayout>
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textMultiLine"
+            android:hint="@string/RecipeDescriptionText"
+            android:background="@drawable/textinputborder"
+            android:ems="10"
+            android:id="@+id/editText"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.26"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="5dp" />
+
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
