--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -84,7 +84,7 @@
             android:hint="@string/RecipeDescriptionText"
             android:background="@drawable/textinputborder"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/DescriptionText"
             android:layout_marginTop="10dp"
             android:layout_weight="0.26"
             android:paddingTop="10dp"
@@ -234,7 +234,8 @@
             android:id="@+id/saveRecipeButton"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/textinputborder"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:onClick="SaveRecipe" />
 
     </LinearLayout>
 
