--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.fluxes.cookbook.MainActivity">
 
+    <item android:id="@+id/action_search"
+        android:icon="@drawable/ic_search_white_24dp"
+        android:title="@string/action_search"
+        app:showAsAction="always"/>
+
     <item android:id="@+id/action_favorite"
         android:icon="@drawable/ic_star_rate_white_18dp"
         android:title="@string/action_favorite"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item android:id="@+id/user_info"
         android:icon="@drawable/ic_face_white_18dp"
         android:title="@string/action_favorite"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
 
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
