--- a/app/src/main/res/drawable/ingredienttablerow.xml
+++ b/app/src/main/res/drawable/ingredienttablerow.xml
@@ -4,11 +4,8 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <gradient
-            android:startColor="#f9d1d5"
-            android:endColor="#f96d79"
-            android:angle="45"/>
-        <corners android:radius="10dp" />
+        <solid android:color="#ffe2e2e2" />
+        <corners android:radius="2dp" />
     </shape>
 
 </inset>
