--- a/app/src/main/res/drawable/recipe_info_row_style.xml
+++ b/app/src/main/res/drawable/recipe_info_row_style.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetTop="10dp"
-    android:insetLeft="10dp"
-    android:insetRight="10dp">
+    android:insetTop="0dp"
+    android:insetLeft="0dp"
+    android:insetRight="0dp">
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <gradient
-            android:startColor="#aaffd6da"
-            android:endColor="#afed555d"
-            android:angle="0"/>
-        <corners android:radius="2dp" />
+        <!--<solid android:color="#ffe2e2e2" />-->
+        <stroke android:color="#ffe2e2e2" android:width="2dp" />
+        <corners android:radius="0dp" />
     </shape>
 
 </inset>
