--- a/app/src/main/res/drawable/stepstablerow.xml
+++ b/app/src/main/res/drawable/stepstablerow.xml
@@ -4,10 +4,7 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <gradient
-            android:startColor="#0dc0c0c0"
-            android:endColor="#22000000"
-            android:angle="45"/>
-        <corners android:radius="10dp" />
+        <solid android:color="#ffe2e2e2" />
+        <corners android:radius="2dp" />
     </shape>
 </inset>
