--- a/app/src/main/res/layout/activity_new_recipe.xml
+++ b/app/src/main/res/layout/activity_new_recipe.xml
@@ -94,6 +94,7 @@
             android:paddingLeft="10dp"
             android:paddingRight="5dp" />
 
+        <!--
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -175,6 +176,7 @@
                 />
 
         </GridLayout>
+        -->
 
         <TextView
             android:layout_width="match_parent"
@@ -201,7 +203,8 @@
             android:text="@string/addIngredientButton"
             android:textColor="@android:color/darker_gray"
             android:id="@+id/addIng"
-            android:onClick="addIngRow" />
+            android:onClick="addIngRow"
+            android:capitalize="sentences" />
 
         <TextView
             android:layout_width="wrap_content"
