--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -8,13 +8,24 @@
     tools:context="com.fluxes.cookbook.UserInfo"
     android:background="#f5d3d3d3">
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView10"
+        android:adjustViewBounds="true"
+        android:scaleType="fitEnd"
+        android:background="@drawable/img"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="88dp"
-        android:stretchColumns="2">
+        android:stretchColumns="2"
+        android:id="@+id/tableLayout">
 
         <TableRow
             android:layout_width="match_parent"
@@ -35,12 +46,18 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/userBirthday"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_menu_month"
+                android:layout_gravity="center_vertical"
                 android:id="@+id/imageButton1"
                 android:layout_column="3"/>
         </TableRow>
@@ -65,15 +82,20 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/userEmail"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/imageButton2"
                 android:layout_column="3"
-                android:background="@android:drawable/ic_dialog_email" />
+                android:background="@android:drawable/ic_dialog_email"
+                android:layout_gravity="center_vertical" />
         </TableRow>
 
         <TableRow
@@ -96,8 +118,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/userFirstName"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
         </TableRow>
 
@@ -106,7 +132,8 @@
             android:layout_height="match_parent"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -119,9 +146,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView9"
+                android:id="@+id/userLastName"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
         </TableRow>
 
@@ -130,7 +162,8 @@
             android:layout_height="match_parent"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -145,21 +178,25 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/userGender"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
         </TableRow>
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:layout_weight="1">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:text="Username"
                 android:id="@+id/textView10"
                 android:layout_column="0"
@@ -170,8 +207,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/userUsername"
                 android:layout_column="2"
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical" />
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textAlignment="center"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="-2dp"
+                android:textStyle="bold" />
 
         </TableRow>
 
