--- a/app/src/main/res/drawable/ingredienttablerow.xml
+++ b/app/src/main/res/drawable/ingredienttablerow.xml
@@ -4,8 +4,11 @@
 
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
-        <solid android:color="#ffe2e2e2" />
-        <corners android:radius="2dp" />
+        <gradient
+                    android:startColor="#2ff5908c"
+                    android:endColor="#f9453e"
+                    android:angle="45"/>
+                <corners android:radius="10dp" />
     </shape>
 
 </inset>
