--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:onClick="createNewRecipe"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:background="@drawable/textinputborder"/>
 
 </RelativeLayout>
